Edited_Code_and_Results/xzoom_edits/xzoom_compilation_errors.txt
   Compiling xzoom v0.0.0 (/mnt/c/Users/mazin/Downloads/School/Research/datasets/2-C2Rust-Translation/xzoom_edits)
error[E0425]: cannot find function `alarm` in this scope
    --> src/main.rs:2422:29
     |
2422 | ...                   alarm(2 as libc::c_int);
     |                       ^^^^^ not found in this scope
     |
help: consider importing one of these items
     |
1    | use crate::libc::alarm;
     |
1    | use libc::alarm;
     |

error[E0425]: cannot find function `usleep` in this scope
    --> src/main.rs:2465:13
     |
2465 |             usleep(delay);
     |             ^^^^^^ not found in this scope
     |
help: consider importing one of these items
     |
1    | use crate::libc::usleep;
     |
1    | use libc::usleep;
     |

error[E0658]: extern types are experimental
 --> src/main.rs:3:5
  |
3 |     pub type _IO_wide_data;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

error[E0658]: extern types are experimental
 --> src/main.rs:4:5
  |
4 |     pub type _IO_codecvt;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

error[E0658]: extern types are experimental
 --> src/main.rs:5:5
  |
5 |     pub type _IO_marker;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

error[E0658]: extern types are experimental
 --> src/main.rs:6:5
  |
6 |     pub type _XGC;
  |     ^^^^^^^^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

error[E0658]: extern types are experimental
 --> src/main.rs:7:5
  |
7 |     pub type _XDisplay;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

error[E0658]: extern types are experimental
 --> src/main.rs:8:5
  |
8 |     pub type _XPrivate;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

error[E0658]: extern types are experimental
 --> src/main.rs:9:5
  |
9 |     pub type _XrmHashBucketRec;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

warning: type `size_t` should have an upper camel case name
   --> src/main.rs:138:10
    |
138 | pub type size_t = libc::c_ulong;
    |          ^^^^^^ help: convert the identifier to upper camel case: `SizeT`
    |
    = note: `#[warn(non_camel_case_types)]` on by default

warning: type `__off_t` should have an upper camel case name
   --> src/main.rs:139:10
    |
139 | pub type __off_t = libc::c_long;
    |          ^^^^^^^ help: convert the identifier to upper camel case: `OffT`

warning: type `__off64_t` should have an upper camel case name
   --> src/main.rs:140:10
    |
140 | pub type __off64_t = libc::c_long;
    |          ^^^^^^^^^ help: convert the identifier to upper camel case: `Off64T`

warning: type `_IO_lock_t` should have an upper camel case name
   --> src/main.rs:174:10
    |
174 | pub type _IO_lock_t = ();
    |          ^^^^^^^^^^ help: convert the identifier to upper camel case: `IoLockT`

warning: type `__sighandler_t` should have an upper camel case name
   --> src/main.rs:176:10
    |
176 | pub type __sighandler_t = Option::<unsafe extern "C" fn(libc::c_int) -> ()>;
    |          ^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `SighandlerT`

Some errors have detailed explanations: E0425, E0658.
For more information about an error, try `rustc --explain E0425`.
warning: `xzoom` (bin "xzoom") generated 5 warnings
error: could not compile `xzoom` due to 9 previous errors; 5 warnings emitted
